--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
 #logo {
     width: 240px;
 
@@ -56,7 +60,7 @@ nav a:hover {
 
 .itens {
     width: 220px;
-    height: 220px;
+    height: 0px;
     padding: 20px;
 
 }
@@ -92,11 +96,11 @@ nav a:hover {
 }
 
 .produtos li:hover h2 {
-    font-size: 34px;
+    font-size: 29px;
 }
 
 .produtos h2 {
-    font-size: 30px;
+    font-size: 28px;
     font-weight: bold;
 }
 
@@ -128,8 +132,7 @@ footer {
 }
 
 main {
-    width: 940px;
-    margin: 0 auto;
+    
 }
 
 form {
@@ -188,3 +191,150 @@ th {
     border: 1px solid #000000;
     padding: 8px 20px;
 }
+
+/* css da página inicial*/
+.banner{
+width: 100%;
+opacity: 0.8;
+}
+
+.titulo-principal{
+    text-align: center;
+    font-size: 2em; /* 2 vezes o tamanho base (a base é 15px)*/
+    margin: 0 0 1em;
+    clear: left;
+    /*color: rgba(0, 0, 0, 0.3); opacidade nas letras*/
+    /*text-shadow: 2px 2px pink; sombra na letra*/
+
+}
+
+/*.titulo-principal:first-letter{
+    font-weight: bold;
+    } para a primeira letra ser em negrito
+
+.titulo-principal:before {
+    content: "["; conteúdo antes do título
+}
+.titulo-principal:after {
+    content: "]"; conteúdo depois do título
+} */
+
+.principal{
+    padding: 3em 0;
+    background: #FEFEFE;
+    width: 940px;
+    margin: 0 auto
+}
+
+.principal p{
+margin: 0 0 1em;
+}
+
+.principal strong{
+    font-family: bold;
+}
+
+.principal em {
+    font-style: italic;
+}
+
+.furniture{
+    width: 120px;
+    float: left;
+    margin: 0 20px 20px 0;
+}
+
+.mapa{
+    padding: 3em 0; /*3em pra cima e pra baixo e 0 para as laterais*/
+   background: linear-gradient(#FEFEFE, #f3b977 );
+}
+
+.mapa-conteudo{
+    width: 940px;
+    margin: 0 auto ;
+}
+
+.mapa p{
+    margin: 0 0 2em;
+    text-align: center;
+}
+
+
+.beneficios{
+    padding: 3em 0;
+    background: #f3b977;
+    /*box-shadow: inset 0 0 30px pink; sombra interna ao elemento*/
+
+}
+
+.conteudo-beneficios{
+width: 640px;
+margin: 0 auto;
+}
+
+.lista-beneficios{
+    width: 40%;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.itens{
+    line-height: 1.5;
+}
+
+.itens:first-child{
+    font-weight: bold;
+}
+
+.itens:before{
+    content: "★";
+}
+
+.imagem-beneficios{
+    width: 60%;
+    opacity: 1;
+    transition: 400ms;
+    box-shadow: 10px 10px 30px 20px #b95f0a /*, -10px -10px 30px 20px #b95f0a;*/
+}
+
+.imagem-beneficios:hover{
+    opacity: 0.3;
+}
+
+
+
+.video{
+    width: 560px;
+    margin: 2em auto;
+}
+
+/*.principal p:not(#missao){
+    background: #b95f0a;
+} tudo que for parágrafo e que não for missão vai ter o fundo colorido*/
+
+
+
+.itens-produtos {
+    width: 220px;
+    height: 220px;
+    padding: 20px;
+
+}
+
+@media screen and (max-width: 480px){
+        .caixa, .principal, .conteudo-beneficios, .mapa-conteudo, .video{
+            width: auto;
+        }
+        h1{
+            text-align: center;
+        }
+
+        nav{
+            position: static;
+        }
+
+        .lista-beneficios, .imagem-beneficios{
+            width: 100%;
+
+        }
+    }
